# svg2grass.symbol

./: INSTALL.md  README.md  pyproject.toml
svg2grasssymbol/: __init__.py  cli.py  converter.py
tests/: test_converter.py
